[package]
name = "fastrs"
version = "0.1.0"
authors = ["gyc567 <gyc567@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
speculate = "0.1"

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.3"
toml = "0.5"
serde = "1.0.104"
serde_derive = "1.0.104"